[project]
name = "comfyui-save-image-local"
description = "ComfyUI custom node for directly downloading generated images to your local PC with customizable filenames, formats (PNG/JPEG/WebP), EXIF metadata, and advanced compression settings."
version = "2.0.0"
license = {file = "LICENSE"}
dependencies = [
    "piexif>=1.1.3"
]

[project.urls]
Repository = "https://github.com/yhayano-ponotech/comfyui-save-image-local"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "yas-ponotech"
DisplayName = "ComfyUI Local Save Node"
Icon = ""